--- a/package.json
+++ b/package.json
@@ -16,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/rakuten-frontend/eslint-config-rex-react-component/issues"
   },
-  "homepage": "https://github.com/rakuten-frontend/eslint-config-rex-react-component#readme"
+  "homepage": "https://github.com/rakuten-frontend/eslint-config-rex-react-component#readme",
+  "dependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.10.0"
+  },
+  "peerDependencies": {
+    "eslint": "^4.19.1 || ^5.3.0"
+  }
 }
