--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+ssh://git@github.com/rakuten-frontend/eslint-config-rex-react-component.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "ReX React UI Components Library Authors (https://github.com/rakuten-frontend/eslint-config-rex-react-component/graphs/contributors)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/rakuten-frontend/eslint-config-rex-react-component/issues"
