--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "dependencies": {
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1"
   },
   "devDependencies": {
-    "eslint": "^5.10.0"
+    "eslint": "^5.3.0"
   },
   "peerDependencies": {
     "eslint": "^4.19.1 || ^5.3.0"
