--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^5.3.0"
